Footer fixed on mobile

--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -14,6 +14,7 @@
   width: 100%;
 }
 
+
 .footer section {
   flex-grow: 1;
   margin: 10px;
@@ -64,4 +65,16 @@
 .facebookIcon {
   composes: socialIcon;
   color: #3A5796;
+}
+
+/* Mobile */
+@media only screen and (max-device-width: 600px) {
+  .footer {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .socialIcons {
+    margin-left: 33%;
+  }
 }
